binrw/tests/ui/args_calc_conflict.rs
use binrw::BinRead;

#[derive(BinRead)]
struct Foo {
    #[br(args(()), calc(None))]
    a: Option<u8>,
}

fn main() {}
